# src/entities/user.entity.ts
@@ -1,6 +1,6 @@
-import { UnauthorizedException } from '@nestjs/common';
-import { Entity, Column, PrimaryGeneratedColumn } from 'typeorm';
-
+import { strRandom } from 'src/utils';
+import { Entity, Column, PrimaryGeneratedColumn, BeforeInsert, UpdateDateColumn, CreateDateColumn } from 'typeorm';
+import { v4 } from 'uuid'
 @Entity({
     name: 'users'
 })
@@ -8,6 +8,19 @@ export class User {
 
   @PrimaryGeneratedColumn()
   id: number;
+
+  @Column()
+  code: string;
+
+  @Column({
+    nullable: true,
+  })
+  referral_code: string;
+
+  @Column({
+    nullable: true,
+  })
+  referral_link: string;
 
   @Column()
   uuid: string;
@@ -28,7 +41,6 @@ export class User {
     name: 'phone_verified_at'
   })
   phone_verified_at: Date;
-  //phoneVerifiedAt: Date;
 
   @Column()
   email: string;
@@ -37,7 +49,6 @@ export class User {
     name: 'email_verified_at'
   })
   email_verified_at: Date;
-  //emailVerifiedAt: Date;
 
   @Column()
   password: string;
@@ -46,71 +57,47 @@ export class User {
     name: 'telegram_account'
   })
   telegram_account: string;
-  //telegramAccount: string;
 
   @Column({
     name: 'telegram_chat_id'
   })
   telegram_chat_id: string;
-  //telegramChatId: string;
 
   @Column({
     name: 'telegram_verified_at'
   })
   telegram_verified_at: Date;
-  //telegramVerifiedAt: Date;
 
   @Column({
     name: 'member_id'
   })
   member_id: number;
-  //memberId: number;
 
   @Column({
     name: 'member_package_id'
   })
   member_package_id: number;
-  //memberPackageId: number;
 
   @Column({
     name: 'member_subscription_id'
   })
   member_subscription_id: number;
-  //memberSubscriptionId: number;
 
   @Column({
     name: 'member_status'
   })
   member_status: string;
-  //memberStatus: string;
 
-  @Column('json')
-  coordinate: coordinateType;
+  @UpdateDateColumn()
+  updated_at: Date
+  
+  @CreateDateColumn()
+  created_at: Date
 
-  @Column({
-    type: 'json',
-    name: 'current_login'
-  })
-  currentLogin: CurrentLoginType;
+  @BeforeInsert()
+  beforeInsert() {
+    this.code = strRandom(6)
+    this.uuid = v4()
+  }
 
-  @Column({
-    type: 'json',
-    name: 'current_login'
-  })
-  lastLogin: CurrentLoginType;
-}
-
-type coordinateType = {
-  latitude: number;
-  longitude: number;
-}
-
-
-type CurrentLoginType = {
-  ip: string,
-  app: string,
-  device: string,
-  device_id: string,
-  timestamp: number,
-  coordinate: coordinateType,
 }
